NetBSD Problem Report #4532

Received: (qmail 449 invoked from network); 18 Nov 1997 12:18:16 -0000
Message-Id: <199711181217.NAA12102@watcher.eis.cs.tu-bs.de>
Date: Tue, 18 Nov 1997 13:17:06 +0100 (MET)
From: Juergen Hannken-Illjes <hannken@eis.cs.tu-bs.de>
Reply-To: hannken@eis.cs.tu-bs.de
To: gnats-bugs@gnats.netbsd.org
Subject: kernel doesn't compile
X-Send-Pr-Version: 3.95

>Number:         4532
>Category:       port-sun3
>Synopsis:       kernel doesn't compile
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    hannken
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Nov 18 04:20:03 +0000 1997
>Closed-Date:    Tue Nov 18 12:31:20 +0000 1997
>Last-Modified:  Tue Nov 18 12:41:57 +0000 1997
>Originator:     Juergen Hannken-Illjes
>Release:        <NetBSD-current source date>today
>Organization:
Juergen Hannken-Illjes - hannken@eis.cs.tu-bs.de - TU Braunschweig (W Germany)
>Environment:

System: NetBSD tester 1.3_ALPHA NetBSD 1.3_ALPHA (CUSTOM) #23: Mon Nov 17 23:14:22 MET 1997     hannken@tester:/usr/src/sys/arch/sun3x/compile/CUSTOM sun3x


>Description:

	Kernel doesn't compile because of wrong order of include files in
	file sys/arch/sun3x/sun3x/machdep.c (V1.25).

	sys/sysctl.h uses struct vmspace at line 202, defined in vm/vm.h.
>How-To-Repeat:

	Try to build a kernel.
>Fix:

Index: machdep.c
===================================================================
RCS file: /cvs/NetBSD/src/sys/arch/sun3x/sun3x/machdep.c,v
retrieving revision 1.1.1.15
diff -u -2 -r1.1.1.15 machdep.c
--- machdep.c	1997/10/10 08:23:03	1.1.1.15
+++ machdep.c	1997/11/18 12:11:47
@@ -64,5 +64,4 @@
 #include <sys/kcore.h>
 #include <sys/vnode.h>
-#include <sys/sysctl.h>
 #include <sys/syscallargs.h>
 #ifdef SYSVMSG
@@ -83,4 +82,6 @@
 #include <vm/vm_kern.h>
 #include <vm/vm_page.h>
+
+#include <sys/sysctl.h>

 #include <dev/cons.h>
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed 
State-Changed-By: hannken 
State-Changed-When: Tue Nov 18 04:31:20 PST 1997 
State-Changed-Why:  
Fixed. 


Responsible-Changed-From-To: gnats-admin->hannken 
Responsible-Changed-By: hannken 
Responsible-Changed-When: Tue Nov 18 04:31:20 PST 1997 
Responsible-Changed-Why:  
Fix applied. 
>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.