Change order of include files. See PR #4532.